# devin-test-project

./: .env.example  .gitignore  Justfile  README.md  config.py  pyproject.toml  requirements.txt
customer_support_agent/: __init__.py  agent.py  prompts.py  tools.py
devin_support_agent/: agent.py  callbacks.py  knowledge.py  tools.py
smartlogs/: __init__.py  agent.py  cli.py  config.py  tools.py
tests/: test_agent.py  test_callbacks.py  test_cli.py  test_cli_retries.py  test_tools.py
